--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         </section>
     </main>
     
-    <footer></footer>
+    <footer>
+           <img src="./images/media/facebook.svg" alt="ICON">
+           <img src="./images/media/twitter.svg" alt="ICON">
+           <img src="./images/media/instagram.svg" alt="ICON">
+    </footer>
 
 </body>
 
